traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:1: error: Missing closing brace `}' assumed here
droite()
^